# youtube_download

./: .gitignore  .prettierignore  README.md  SETUP.md  how --stat f12f9f5  package.json  pnpm-lock.yaml  pyproject.toml  setup.ps1  setup.sh  turbo.json
apps/backend/: .env.example  .eslintrc.cjs  package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/config/: env.ts  swagger.ts
apps/backend/src/controllers/: download.controller.ts
apps/backend/src/middleware/: cors.ts  error.ts
apps/backend/src/routes/: download.routes.ts  index.ts
apps/backend/src/services/: ytdlp.service.ts
apps/backend/src/utils/: logger.ts
apps/frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: index.css  router.tsx
apps/frontend/src/components/: DownloadForm.tsx  DownloadProgress.tsx  Layout.tsx  RecentDownloads.tsx  VideoInfo.tsx
apps/frontend/src/pages/: HomePage.tsx
apps/frontend/src/services/: api.ts
apps/frontend/src/stores/: download.ts
config/: ports.json
scripts/: configure-env.js  configure-ports.js  dev-robust.js  dev.ps1  force-cleanup.js  kill-ports.ps1  kill-ports.sh
tools/eslint-config/: base.js  package.json  react.js
tools/typescript-config/: base.json  node.json  package.json  react.json
youtube_downloader/: __init__.py
