[tool.poetry]
name = "youtube-downloader"
version = "1.0.0"
description = "YouTube video downloader application with web interface"
authors = ["YouTube Downloader Team"]
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = "^3.9"
yt-dlp = "^2025.8.27"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true